src/objects/NQT_Eq_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Duplication_Check__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duplication Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Group__c</fullName>
        <label>In Group</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Kit__c</fullName>
        <label>In Kit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <formula>NQT_Part_Number__r.NQT_Inventory_Status__c</formula>
        <label>Inventory Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Part_Number__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Description__c</fullName>
        <inlineHelpText>Please enter description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Engineering_Notes__c</fullName>
        <inlineHelpText>Please enter Description of  Engineering Notes</inlineHelpText>
        <label>Engineering Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Equipment_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment List</label>
        <referenceTo>NQT_Equipment_List__c</referenceTo>
        <relationshipLabel>Kit/Part</relationshipLabel>
        <relationshipName>Upload_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Extended_Price__c</fullName>
        <formula>NQT_Quantity__c  * Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NQT_Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit/Part Number</label>
        <referenceTo>NQT_Product__c</referenceTo>
        <relationshipName>SOW_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Please enter Quantity</inlineHelpText>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NQT_Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <formula>VALUE(SUBSTITUTE(NQT_Part_Number__r.NQT_Standard_Price__c, &apos;,&apos; , &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Kit/Part</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Sr. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit/Part</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>